--- a/devo_analysis.qmd
+++ b/devo_analysis.qmd
@@ -8,6 +8,7 @@ format: html
 library(tidyverse)
 library(babyviewr)
 library(lubridate)
+library(ggthemes)
 ```
 
 ```{r}
@@ -17,16 +18,15 @@ recordings <- babyviewr::get_main_recording_data(include_luna = TRUE)
 ```
 
 ```{r}
-d_merged <- left_join(recordings, 
+d <- left_join(recordings, 
                       participants |>
                         filter(dataset %in% c("BV-main","Luna")) |>
-                        select(-dataset), by = "subject_id")
-
-d <- d_merged |>
+                        select(-dataset), by = "subject_id") |>
   group_by(subject_id) |>
   arrange(date_time) |>
   mutate(age = date(date_time) - date_birth_rounded, 
-         cumulative_hrs = cumsum(duration_hrs))
+         cumulative_hrs = cumsum(duration_hrs), 
+         age_mo = floor(as.numeric(age)/30.3))
 
 
 ggplot(filter(d, dataset == "BV-main"), 
@@ -34,8 +34,94 @@ ggplot(filter(d, dataset == "BV-main"),
   geom_point(alpha= .1) + 
   geom_point(data = filter(d, dataset == "Luna"), col = "black") + 
   scale_color_discrete(guide = FALSE) + 
-  ggthemes::theme_few() + 
+  theme_few() + 
   xlab("Age (months)") + 
   ylab("Cumulative hours of data")
 ```
 
+```{r}
+age_density <- d |>
+  group_by(age_mo, dataset) |>
+  summarise(n = n(), 
+            n_participants = n_distinct(subject_id), 
+            n_hours = sum(duration_hrs))
+
+ggplot(age_density, aes(x = age_mo, y = n_hours, fill = dataset)) + 
+  geom_bar(stat = "identity") + 
+  xlab("Age (months)") + 
+  ylab("Total hours of data") + 
+  scale_fill_solarized() +
+  theme_few()
+```
+# Poses
+
+
+```{r}
+poses <- read_csv("frame_data/pose_collated_1000.csv")
+
+```
+Looks like some of the 10k sample frames are from Bing. 
+
+```{r}
+poses$video_hashid[!(poses$video_hashid %in% recordings$superseded_gcp_name_feb25)]
+
+any(recordings$superseded_gcp_name_feb25 == "01420001_2024-05-20_1_10a1a67ed7", na.rm=TRUE)
+
+```
+
+Merge in the data
+
+```{r}
+
+poses_joined <- inner_join(poses, d, by = c("video_hashid" = "superseded_gcp_name_feb25"))
+```
+
+
+```{r}
+pose_ms <- poses_joined |>
+  group_by(age_mo) |>
+  summarise(n = n(), 
+            body = mean(body_in_image), 
+            face = mean(face_in_image), 
+            hand = mean(hands_in_image)) |>
+  pivot_longer(cols = c("body", "face", "hand"), 
+               names_to = "part", values_to = "prop")
+  
+
+ggplot(pose_ms, aes(x = age_mo, y = prop, col = part)) + 
+  geom_point(aes(size = n)) + 
+  geom_smooth(method = "lm")
+```
+
+# Objects
+
+```{r}
+objects <- read_csv("frame_data/yoloe_1000_frames_fixed.csv")
+
+objects_joined <- inner_join(objects, d, by = c("superseded_gcp_name_feb25"))
+
+any(recordings$superseded_gcp_name_feb25 == "00510002_2024-08-12_2_dfc73374a", na.rm=TRUE)
+
+objects$superseded_gcp_name_feb25[!(objects$superseded_gcp_name_feb25 %in% recordings$superseded_gcp_name_feb25)]
+```
+
+
+```{r}
+object_ms <- objects_joined |>
+  group_by(age_mo, superseded_gcp_name_feb25) |>
+  summarise(n = n(), 
+            pixels = mean(masked_pixel_count)) |>
+  group_by(age_mo) |>
+  summarise(n_objs = mean(n), 
+            n= n(), 
+            pixels = mean(pixels))
+  
+  
+ggplot(object_ms, aes(x = age_mo, y = n_objs)) + 
+  geom_point(aes(size = n)) + 
+  geom_smooth(method = "lm")
+
+ggplot(object_ms, aes(x = age_mo, y = pixels)) + 
+  geom_point(aes(size = n)) + 
+  geom_smooth(method = "lm")
+```
