--- a/devo_analysis.qmd
+++ b/devo_analysis.qmd
@@ -96,13 +96,27 @@ ggplot(pose_ms, aes(x = age_mo, y = prop, col = part)) +
 # Objects
 
 ```{r}
-objects <- read_csv("frame_data/yoloe_1000_frames_fixed.csv")
+objects <- read_csv("frame_data/yoloe_1k_frames_fixed_ids.csv")
+length(unique(objects$superseded_gcp_name_feb25))
+```
 
+```{r}
 objects_joined <- inner_join(objects, d, by = c("superseded_gcp_name_feb25"))
+length(unique(objects_joined$superseded_gcp_name_feb25))
+```
 
+Spot checks. Some are missing because Bing (maybe 110?)
+
+```{r}
+objects$superseded_gcp_name_feb25[!(objects$superseded_gcp_name_feb25 %in% recordings$superseded_gcp_name_feb25)]
+
+any(objects$superseded_gcp_name_feb25 == "00510002_2024-08-12_2_dfc73374a", na.rm=TRUE)
 any(recordings$superseded_gcp_name_feb25 == "00510002_2024-08-12_2_dfc73374a", na.rm=TRUE)
 
-objects$superseded_gcp_name_feb25[!(objects$superseded_gcp_name_feb25 %in% recordings$superseded_gcp_name_feb25)]
+filter(recordings, unique_video_id == "recXBjCoaczhhbeef")$superseded_gcp_name_feb25
+"00510002_2024-08-12_2_dfc73374ae"
+
+unique(objects$superseded_gcp_name_feb25[!(objects$superseded_gcp_name_feb25 %in% recordings$superseded_gcp_name_feb25)])
 ```
 
 
@@ -116,12 +130,15 @@ object_ms <- objects_joined |>
             n= n(), 
             pixels = mean(pixels))
   
-  
 ggplot(object_ms, aes(x = age_mo, y = n_objs)) + 
   geom_point(aes(size = n)) + 
-  geom_smooth(method = "lm")
+  geom_smooth(method = "lm") + 
+  ylab("Number of objects in frame (average)") +
+  xlab("Age (months)")
 
 ggplot(object_ms, aes(x = age_mo, y = pixels)) + 
   geom_point(aes(size = n)) + 
-  geom_smooth(method = "lm")
+  geom_smooth(method = "lm") + 
+  ylab("Size of objects in frame (px)") +
+  xlab("Age (months)")
 ```
